# autonomous-swarm-negotiation-engine

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
asne/: __init__.py
asne/agents/: __init__.py  base.py  dqn.py  gnn_agent.py  meta_learner.py  swarm.py  transformer_agent.py  world_model.py
asne/api/: server.py
asne/api_hub/: __init__.py  connector.py
asne/blockchain/: __init__.py  settlement.py  smart_contract.py
asne/core/: __init__.py  config.py  types.py
asne/environment/: __init__.py  deal_env.py
asne/ethics/: __init__.py  engine.py  transparency.py
asne/intelligence/: __init__.py  causal.py  counterfactual.py  self_improve.py  theory_of_mind.py
asne/llm/: __init__.py
asne/market/: __init__.py
asne/orchestrator/: __init__.py
asne/quantum/: __init__.py  optimizer.py
asne/safety/: __init__.py
asne/twin/: __init__.py  interface.py
asne/zkp/: __init__.py
tests/: __init__.py  test_agents.py  test_config.py  test_environment.py  test_ethics.py
